--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>    
 <body>
     <div class="main-content">
-        <h1 id="question">Will you be my Valentine?</h1>
-        <img id="gif" src="askquestion.gif" alt="Question GIF" id="question">
+        <h1 id="question">Will you be my Valentine? ❤️</h1>
+        <img id="gif" src="question.gif" alt="Question GIF" id="question">
         <div class="buttons">
             <button id="yes">Yes</button>
             <button id="no">No</button>
