--- a/yes.html
+++ b/yes.html
@@ -7,12 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>    
 <body>
-    <div>
+    <div class="main-content">
         <h1 id="question">Yipee! ❤️</h1>
-        
-    </div>
-    <div>
         <img id="gif" src="celebration.gif">
+        <p1 id="yes-body">Make sure you finish all your assignments!!! :3</p1>
     </div>
 </body>
 </html>
